--- a/readme
+++ b/readme
@@ -5,3 +5,6 @@ roughly based on http://www.gcmingati.net/wordpress/wp-content/lab/jquery/newsti
 Licensed under the MIT license.
 http://www.opensource.org/licenses/mit-license.php
 Copyright 2012 Chris Newby
+
+for more info and an demo:
+http://cubiclepi.com/2011/10/google-finance-ticker/
