corrected typo in readme

--- a/readme
+++ b/readme
@@ -6,5 +6,5 @@ Licensed under the MIT license.
 http://www.opensource.org/licenses/mit-license.php
 Copyright 2012 Chris Newby
 
-for more info and an demo:
+for more info and a demo:
 http://cubiclepi.com/2011/10/google-finance-ticker/
